# AI-Research-Assistant

./: AI Research Assistant.webm  MCP_Server_Report_Generator.webm  README.md  client.py  main.py  pyproject.toml  requirements.txt  server.py
AI_Agents/: base_agent.py  mcp_server.py  planner_agent.py  searcher_agent.py  summarizer_agent.py  writer_agent.py
