[project]
name = "stock-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.4",
    "fastapi>=0.115.14",
    "fastmcp>=2.9.1",
    "google-generativeai>=0.8.5",
    "mcp[cli]>=1.10.1",
    "streamlit>=1.46.0",
    "uvicorn>=0.35.0",
]
